uncrimmas and rm paketmeqa

--- a/index.html
+++ b/index.html
@@ -186,24 +186,18 @@
 					<h3 translate="no">geometry dash</h3>
 				</button>
 			</a>
-			<a href="https://t.me/paketmeqa/1482">
-				<button id="tg" title="my Telegram channel">
+			<a href="https://t.me/@meqativ">
+				<button id="tg" title="my Telegram account">
 					<div class="logo_container">
 						<img draggable="false" src="./assets/services/telegram/logo.svg" />
 					</div>
-					<h3 translate="no" style="width: 100%; opacity: 1;">telegram stuff</h3>
-					<h3 style="width: 0px; opacity: 0; text-align: center; font-size: 0px;">channel</h3>
+					<h3 translate="no" style="width: 100%; opacity: 1;">telegram</h3>
+					<h3 style="width: 0px; opacity: 0; text-align: center; font-size: 0px;">@meqativ</h3>
 					<div aria-label="Expand buttons below" tabindex="0" role="button" aria-pressed="false"
 						style="display: none; transform: rotate(0turn);" class="logo_container pointer">&lt;</div>
 				</button>
 			</a>
 			<div closed="true" style="display: none;" class="telegram-btns">
-				<button title="Telegram profile" disabled onclick="window.open(`https://t.me/meqativ`)">
-					<h3>profile</h3>
-					<div class="logo_container">
-						<img draggable="false" class="round" src="./assets/avatar/normal.png" />
-					</div>
-				</button>
 				<button title="Telegram language pack" disabled onclick="window.open(`https://t.me/setlanguage/meqalang`)">
 					<h3>language</h3>
 					<div class="logo_container">
