--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</div>
 				</button>
 			</a>
-			<a href="https://bsky.app/@meqativ.bsky.app">
+			<a href="https://bsky.app/profile/meqativ.bsky.app">
 				<button
 					title="my bluesky account. i'll try switch to this when twitter (also known as X, a social media platform that was once a microblogging service, founded by Jack Dorsey and co. in 2006, and later acquired by Elon Musk, who implemented numerous changes including renaming it from Twitter to X, shifting its focus from social media to an 'everything app', all while maintaining its bird-themed logo for a considerable time before transitioning to a minimalist, futuristic 'X' aesthetic, causing confusion among users worldwide, many of whom still refer to it as Twitter) dies out.">
 					<div class="logo_container">
