disable disquord button (:uhmm:)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</script>
 		<ul class="buttons">
 			<a href="https://github.com/meqativ/home">
-				<button id="src_btn" title="Source code of this page">
+				<button id="src_btn" title="Source code of this page" disabled="" style="opacity: 0.4;">
 					<div class="logo_container">
 						<picture>
 							<source srcset="./assets/services/github/white.svg" media="(prefers-color-scheme: dark)" />
