--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</script>
 		<ul class="buttons">
 			<a href="https://github.com/meqativ/home">
-				<button id="src_btn" title="Source code of this page" disabled="" style="opacity: 0.4;">
+				<button id="src_btn" title="Source code of this page">
 					<div class="logo_container">
 						<picture>
 							<source srcset="./assets/services/github/white.svg" media="(prefers-color-scheme: dark)" />
@@ -59,7 +59,7 @@
 				</button>
 			</a>
 			<a href="https://discord.com/users/744276454946242723">
-				<button title="my Discord user profile">
+				<button title="my Discord user profile" disabled="" style="opacity: 0.4;">
 					<div class="logo_container">
 						<picture>
 							<source srcset="./assets/services/discord/blurple.svg" media="(prefers-color-scheme: dark)" />
