this site is constantly left to rot

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</button>
 			</a>
 			<a href="https://discord.com/users/744276454946242723">
-				<button title="my Discord user profile" disabled="" style="opacity: 0.4;">
+				<button title="my Discord user profile">
 					<div class="logo_container">
 						<picture>
 							<source srcset="./assets/services/discord/blurple.svg" media="(prefers-color-scheme: dark)" />
