add discord server

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 					<h3 translate="no">youtube</h3>
 				</button>
 			</a>
-			<a href="https://discord.com/users/744276454946242723">
-				<button title="my Discord user profile">
+			<a href="https://discord.gg/NyQqnyttqW">
+				<button title="my Discord server, that is serving the purpose of a kind of blog">
 					<div class="logo_container">
 						<picture>
 							<source srcset="./assets/services/discord/blurple.svg" media="(prefers-color-scheme: dark)" />
 							<img draggable="false" src="./assets/services/discord/black.svg" />
 						</picture>
 					</div>
-					<h3 translate="no">discord</h3>
+					<h3 translate="no">discord "blog" server</h3>
 				</button>
 			</a>
 			<a href="https://twitter.com/meqativ">
