--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
 	<link preload href="style.css" rel="stylesheet" type="text/css" />
 	<meta property="og:title" content="meqativ" />
-	<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
+	<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar/normal.png" />
 	<meta content="origin" name="referrer">
 	<meta name="theme-color" content="#8800ff" />
 	<meta name="color-scheme" content="dark light" />
